--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,42 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:padding="6dip" >
+    android:layout_height="70dp"
+    android:padding="6dip"
+    android:background="#FFFFFF"
+    android:id="@+id/news_item_layout"
+    >
 
     <ImageView
         android:id="@+id/itemImage"
         android:layout_width="55dp"
-        android:layout_height="fill_parent"
+        android:layout_height="55dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="6dip"
         android:contentDescription="TODO"
         android:src="@drawable/itc" />
 
-    <TextView
-        android:id="@+id/itemSource"
-        android:layout_width="fill_parent"
-        android:layout_height="15dip"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
         android:layout_toRightOf="@id/itemImage"
-        android:ellipsize="marquee"
-        android:singleLine="true"
-        android:text="Source: itc.ua"
-        android:textSize="12sp" />
+        android:orientation="vertical">
 
     <TextView
         android:id="@+id/itemTitle"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/itemSource"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignWithParentIfMissing="true"
-        android:layout_toRightOf="@id/itemImage"
+        android:layout_height="40dp"
         android:gravity="center_vertical"
         android:text="Реальный дроптест “небьющегося” смартфона DROID Turbo 2 (Moto X Force)"
-        android:textSize="16sp" />
+        android:textSize="14sp"
+        android:textColor="#000000" />
+
+    <TextView
+        android:id="@+id/itemSource"
+        android:layout_width="fill_parent"
+        android:layout_height="15dp"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:text="Source: itc.ua"
+        android:textSize="11sp" />
+    </LinearLayout>
 
 </RelativeLayout>
