--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -15,16 +15,11 @@
         android:layout_marginRight="6dip"
         android:src="@drawable/itc" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:layout_toRightOf="@id/itemImage"
-        android:orientation="vertical">
-
     <TextView
         android:id="@+id/itemTitle"
         android:layout_width="fill_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/itemImage"
         android:gravity="top"
         android:text="Реальный дроптест “небьющегося” смартфона DROID Turbo 2 (Moto X Force)"
         android:textSize="12sp"
@@ -34,10 +29,11 @@
         android:id="@+id/itemSource"
         android:layout_width="fill_parent"
         android:layout_height="16dp"
+        android:layout_toRightOf="@id/itemImage"
+        android:layout_alignBottom="@id/itemImage"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:text="Source: itc.ua"
         android:textSize="9sp" />
-    </LinearLayout>
 
 </RelativeLayout>
